--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,3 +2,10 @@
     height: 100px;
     background-color: aqua
 }
+
+
+#something {
+    text-align: center;
+    font-family: monospace;
+    font-size: 500%;
+}
