--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,36 @@
-.row .col-xs-12{
+html, body{
+    height: 100%;
+    background-color: dodgerblue
+}
+
+#something:hover{
+    background-color: orange;
+}
+
+.row .col-xs-4{
     height: 100px;
-    background-color: aqua
+    /*background-color: aqua*/
+    
+}
+.row .col-xs-4{
+    height: 100px;
+    /*background-color: aqua*/
+    
+}
+
+#something{
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: background-color 0.2s linear;
+}
+
+#something :hover{
+    background-color: orange;
+}
+
+.row .col-xs-12{
+    padding-left: 0px; 
+    padding-right: 0px;
+    
 }
 
 
@@ -9,3 +39,8 @@
     font-family: monospace;
     font-size: 500%;
 }
+
+#btn {   /* Controls the a tag dorms. */
+    color: black;
+    text-decoration: none;
+
