--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -39,4 +39,32 @@ html, body{
     line-height: 1.5;
 }
 
+#Animals {
+    text-align: center;
+    font-family: monospace;
+    font-size: 400%;
+    line-height: 1.5;
+}
+
+#Instruments {
+    text-align: center;
+    font-family: monospace;
+    font-size: 400%;
+    line-height: 1.5;
+}
+
+#Alerts {
+    text-align: center;
+    font-family: monospace;
+    font-size: 400%;
+    line-height: 1.5;
+}
+
+#Streets {
+    text-align: center;
+    font-family: monospace;
+    font-size: 400%;
+    line-height: 1.5;
+}
+
 
