--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,18 +2,14 @@ html, body{
     height: 100%;
     background-color: dodgerblue
 }
-
 #something:hover{
     background-color: orange;
 }
-
 .row .col-xs-4{
     height: 100px;
     /*background-color: aqua*/
     
 }
-
-
 #something : hover{
     background-color: orange;
 }
@@ -22,16 +18,11 @@ html, body{
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: background-color 0.2s linear;
 }
-
-
-
 .row .col-xs-12{
     padding-left: 0px; 
     padding-right: 0px;
     
 }
-
-
 #something {
     text-align: center;
     font-family: monospace;
@@ -39,25 +30,30 @@ html, body{
     line-height: 1.5;
 }
 
-
+/* 0px - 480px */
+@media screen and (max-device-width: 480px){
+   html, body{
+        background-color: orange
+    }
+    
+    
+}
+/* 480px - 640px */
 @media screen and (max-device-width: 640px){
     html, body{
         background-color: red
     }
 }
 
-@media screen and (max-device-width: 480px){
-   html, body{
-        background-color: orange
-    } 
-}
+/* 640px - 768px ??? */
 
+/* 768px - 1024px */
 @media screen and (min-device-width: 768px){
     html, body{
         background-color: purple
     }
 }
-
+/* 1024px - infinity*/
 @media screen and (min-device-width: 1024px){
     html, body{
         background-color: green
