--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -30,10 +30,19 @@ html, body{
     line-height: 1.5;
 }
 
+
+/* --------------------------- Media Queries -------------------------------------*/
 /* 0px - 480px */
 @media screen and (max-device-width: 480px){
    html, body{
         background-color: orange
+            
+    }
+    #something {
+        text-align: center;
+        font-family: monospace;
+        font-size: 400%;
+        line-height: 1.5;
     }
     
     
