--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -29,3 +29,11 @@ html, body{
 }
 
 
+#mmbutton{
+    height: 100px;
+    text-align: center;
+    font-family: monospace;
+    font-size: 100%;
+    line-height: 2.0;
+}
+
