--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -30,10 +30,13 @@ html, body{
 
 
 #mmButton{
-    height: 50px;
+    height: 35px;
     text-align: center;
     font-family: monospace;
     font-size: 100%;
     line-height: 3.0;
+    margin-top: 0px;
+    margin-right: 5px;
+    margin-top: 5px;
 }
 
