--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -36,5 +36,7 @@ html, body{
     font-size: 100%;
     line-height: 2.0;
     margin-top: 5px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: background-color 0.2s linear;
 }
 
